# verself

./: --full-page  .bazeliskrc  .bazelrc  .gitignore  .goreleaser.yml  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  BUILD.bazel  LICENSE  MODULE.aspect  MODULE.bazel  Makefile  README.md  RESEARCH.md  bazel.go.work  bazel.go.work.sum  dev-tools.json  dirty-isolated.html  flake.nix  go.mod  go.sum  go.work  go.work.sum  logo-diff.html  logo-playground.html  package.json
src/apiwire/: AGENTS.md  BUILD.bazel  billing.go  decimal.go  decimal_test.go  doc.go  go.mod  go.sum  governance.go  identity.go  mailbox.go  notifications.go  openapi.go  profile.go  projects.go  sandbox.go  vmresources.go
src/apiwire/docs/: wire-contracts.md
src/apiwire/wirecheck/: BUILD.bazel  legacy_specs_test.go  wirecheck.go  wirecheck_test.go
src/billing-service/client/: BUILD.bazel  client.gen.go  client.go  generate.go  types.go
src/billing-service/migrations/: 001_billing_schema.up.sql  001_initial_schema.up.sql  BUILD.bazel
src/billing-service/openapi/: BUILD.bazel  openapi-3.0.yaml  openapi-3.1.yaml  wire_check_test.go
src/components/: BUILD.bazel
src/components/clickhouse/: BUILD.bazel  nomad.hcl
src/components/grafana/: BUILD.bazel
src/components/haproxy/: BUILD.bazel  nomad.json
src/components/nats/: BUILD.bazel
src/components/otelcol/: BUILD.bazel
src/components/spicedb/: BUILD.bazel  nomad.hcl  nomad.json
src/components/temporal-platform/: BUILD.bazel  go.mod  go.sum  nomad.hcl  nomad.json
src/components/verdaccio/: BUILD.bazel
src/cue-renderer/: AGENTS.md  BUILD.bazel  README.md  go.mod  go.sum  nftables_files.bzl
src/cue-renderer/binaries/: BUILD.bazel  dev_tools.MODULE.bazel  dev_tools.bzl  server_tools.MODULE.bazel  server_tools.bzl
src/cue-renderer/catalog/: BUILD.bazel  cue_types_gen.go  versions.cue
src/cue-renderer/cue.mod/: module.cue
src/cue-renderer/nomad/: jobs.bzl  resolve_jobs.py
src/cue-renderer/schema/: BUILD.bazel  cue_types_gen.go  schema.cue  schema_test.go
src/deployment-tools/nomad/: BUILD.bazel  artifact.bzl  jobs.bzl
src/envconfig/: BUILD.bazel  envconfig.go  envconfig_test.go  go.mod
src/host/: BUILD.bazel  go.mod  go.sum
src/host-configuration/: AGENTS.md  BUILD.bazel  README.md  go.mod
src/host-configuration/ansible/: ansible.cfg  prod.ini.example
src/host-configuration/binaries/: server_tools.MODULE.bazel  server_tools.bzl
src/host-configuration/edgecontract/: BUILD.bazel  load.go  manifest.go  model.go  render.go
src/host-configuration/scripts/: assume-persona.sh  billing-clock.sh  billing-inspect.sh  clickhouse.sh  detect-intrusions.sh  mail-send.sh  observe.sh  pg.sh  reconcile-cloudflare-dns.sh  run-verself-web-local-dev.sh  services-doctor.py  set-user-state.sh  tigerbeetle.sh  wipe-server.sh
src/host-configuration/supply-chain/: policy.json
src/host/ansible/: .ansible-lint.yml  ansible.cfg
src/host/binaries/: server_tools.MODULE.bazel  server_tools.bzl
src/httpserver/: BUILD.bazel  go.mod  httpserver.go  httpserver_test.go
src/otel/: BUILD.bazel  correlation.go  correlation_test.go  go.mod  go.sum  otel.go  otel_test.go
src/pgmigrate/: BUILD.bazel  go.mod  pgmigrate.go
src/platform/: AGENTS.md  BUILD.bazel  dev-tools.json  go.mod  go.sum  server-tools.json
src/platform/ansible/: .ansible-lint-ignore  .ansible-lint.yml  ansible.cfg  requirements.yml
src/platform/ci/: versions.json
src/platform/controller-agent/: otelcol.yaml
src/platform/docs/: identity-and-iam.md  secrets-plane-openbao.md  secrets-service.md
src/platform/guest/: BUILD.bazel  versions.json
src/platform/migrations/: 001_ci_events.up.sql  001_initial_schema.up.sql  002_host_auth_events.up.sql  004_billing_metering.up.sql  006_billing_windows_pg.up.sql  007_sandbox_job_logs.up.sql  008_add_trace_id.up.sql  009_http_access_logs.up.sql  010_mail_observability.up.sql  011_billing_metering_rate_context.up.sql  012_webhook_delivery_events.up.sql  013_ci_warm_manifest_gate.up.sql  013_deploy_events_identity.up.sql  014_billing_events.up.sql  015_vm_lease_evidence.up.sql  015_vm_run_evidence.up.sql  016_sandbox_execution_scheduler_handoff.up.sql  017_sandbox_runner_class_projection.up.sql  018_observability_query_views.up.sql  019_governance_audit_events.up.sql  020_volume_meter_ticks.up.sql  021_object_access_events.up.sql
src/platform/policies/: README.md  contacts.yml  retention.yml  ropa.yml  versions.yml
src/platform/policyspec/: go.mod  go.sum  load.go  types.go
src/platform/scripts/: ansible-with-otel.sh  ansible-with-tunnel.sh  assume-persona.sh  billing-clock.sh  billing-inspect.sh  build-guest-rootfs.sh  clickhouse.sh  collect-sandbox-verification-evidence.sh  console-frontend-deploy-fast.sh  deploy-trace.sh  deploy_identity.sh  detect-intrusions.sh  ensure-verification-repo.sh  generate-inventory.sh  mail-observe.sh  mail-send-local.sh  mail-send.sh  mail.sh  nomad-deploy-all.sh  observe.sh  pg.sh  platform-frontend-deploy-fast.sh  record-deploy-event.sh  record-substrate-event.sh  sandbox-inner.sh  (+58 more)
src/substrate/: AGENTS.md  BUILD.bazel  README.md  digests.bzl  go.mod
src/viteplus-monorepo/: AGENTS.md  BUILD.bazel  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vite.config.ts  viteplus_rules.bzl
src/vm-guest-telemetry/: BUILD.bazel  README.md  build.zig  build.zig.zon
src/vm-orchestrator/: AGENTS.md  BUILD.bazel  api.go  checkpoint.go  checkpoint_test.go  client.go  client_types.go  config_runtime.go  control.go  doc.go  filesystem_commit.go  filesystem_mounts_test.go  go.mod  go.sum  network.go  network_test.go  observer.go  orchestrator.go  parallel_integration_test.go  peer_creds.go  peer_creds_unsupported.go  privops.go  privops_direct.go  privops_direct_test.go  privops_direct_unsupported.go  repo_goldens.go  repo_goldens_test.go  rpc_convert.go  server.go  server_test.go  state_store.go  state_store_test.go  telemetry_decode.go  telemetry_decode_test.go  telemetry_stream.go  telemetry_stream_test.go  tracing.go  zvol.go
tools/substrate/: BUILD.bazel
(+4607 files in other folders)
