load("@bazel_gazelle//:def.bzl", "gazelle")

exports_files(["bazel.go.work"])

# gazelle:exclude artifacts
# gazelle:exclude proof-artifacts
# gazelle:exclude docs/references
# gazelle:exclude src/viteplus-monorepo
# gazelle:exclude src/vm-guest-telemetry

gazelle(
    name = "gazelle",
    args = ["-index=all"],
)
