load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")

exports_files(["bazel.go.work"])

# gazelle:exclude artifacts
# gazelle:exclude smoke-artifacts
# gazelle:exclude docs/references
# gazelle:exclude src/viteplus-monorepo
# gazelle:exclude src/vm-guest-telemetry

gazelle(
    name = "gazelle",
    args = ["-index=all"],
)

test_suite(
    name = "dev_check",
    tests = [
        "//src/billing-service:dev_check",
        "//src/cue-renderer:dev_check",
        "//src/viteplus-monorepo/apps/verself-web:dev_check",
    ],
)

write_source_files(
    name = "dev_update",
    additional_update_targets = [
        "//src/cue-renderer:dev_update",
        "//src/viteplus-monorepo/apps/verself-web:dev_update",
    ],
)
