load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")

exports_files(["bazel.go.work"])

# gazelle:exclude artifacts
# gazelle:exclude smoke-artifacts
# gazelle:exclude docs/references
# gazelle:exclude src/frontends/viteplus-monorepo
# gazelle:exclude src/substrate/vm-guest-telemetry

gazelle(
    name = "gazelle",
    args = ["-index=all"],
)

test_suite(
    name = "dev_check",
    tests = [
        "//src/frontends/viteplus-monorepo/apps/company:dev_check",
        "//src/frontends/viteplus-monorepo/apps/verself-web:dev_check",
    ],
)

write_source_files(
    name = "dev_update",
    additional_update_targets = [
        "//src/frontends/viteplus-monorepo/apps/company:dev_update",
        "//src/frontends/viteplus-monorepo/apps/verself-web:dev_update",
    ],
)
