# gazelle:prefix github.com/verself/cue-renderer

load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")

# Every CUE source the loader walks. Tests in the renderer tree depend
# on this filegroup via `data` so they can resolve the topology dir
# from runfiles via TEST_SRCDIR.
TOPOLOGY_SRCS = [
    "cue.mod/module.cue",
    "//src/cue-renderer/catalog:versions.cue",
    "//src/cue-renderer/instances/prod:config.cue",
    "//src/cue-renderer/instances/prod:convergence.cue",
    "//src/cue-renderer/instances/prod:firewall.cue",
    "//src/cue-renderer/instances/prod:host_firewall.cue",
    "//src/cue-renderer/instances/prod:site.cue",
    "//src/cue-renderer/instances/prod:topology.cue",
    "//src/cue-renderer/schema:schema.cue",
]

filegroup(
    name = "topology_srcs",
    srcs = TOPOLOGY_SRCS,
    visibility = ["//src/cue-renderer:__subpackages__"],
)

# Bazel-input renderers — only artefacts that participate in the build
# graph (loaded via include()/load() at evaluation time) are tracked
# under git. Per-component systemd units, nftables fragments, group_vars
# yml files, and the component-systemd handlers fragment all flow
# through `aspect render --site=<site>` into `.cache/render/<site>/`.

genrule(
    name = "bazel_module_render",
    srcs = TOPOLOGY_SRCS,
    outs = ["server_tools.MODULE.bazel"],
    cmd = "$(location //src/cue-renderer/cmd/cue-renderer) render bazel_module > $@",
    tools = ["//src/cue-renderer/cmd/cue-renderer"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "bazel_dev_tools_module_render",
    srcs = TOPOLOGY_SRCS,
    outs = ["dev_tools.MODULE.bazel"],
    cmd = "$(location //src/cue-renderer/cmd/cue-renderer) render bazel_dev_tools_module > $@",
    tools = ["//src/cue-renderer/cmd/cue-renderer"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "bazel_dev_tools_render",
    srcs = TOPOLOGY_SRCS,
    outs = ["dev_tools.bzl"],
    cmd = "$(location //src/cue-renderer/cmd/cue-renderer) render bazel_dev_tools > $@",
    tools = ["//src/cue-renderer/cmd/cue-renderer"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "bazel_server_tools_render",
    srcs = TOPOLOGY_SRCS,
    outs = ["server_tools.bzl"],
    cmd = "$(location //src/cue-renderer/cmd/cue-renderer) render bazel_server_tools > $@",
    tools = ["//src/cue-renderer/cmd/cue-renderer"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "bazel_guest_images_render",
    srcs = TOPOLOGY_SRCS,
    outs = ["guest_images.MODULE.bazel"],
    cmd = "$(location //src/cue-renderer/cmd/cue-renderer) render bazel_guest_images > $@",
    tools = ["//src/cue-renderer/cmd/cue-renderer"],
    visibility = ["//visibility:public"],
)

# Catalog YAML, consumed by build-time inputs that need pinned upstream
# versions (e.g. the substrate guest-image bundle). Not registered with
# write_source_files: there is no on-disk copy in the working tree, the
# catalog flows directly into downstream Bazel rules from this genrule.
genrule(
    name = "catalog_yaml",
    srcs = TOPOLOGY_SRCS,
    outs = ["catalog.yml"],
    cmd = "$(location //src/cue-renderer/cmd/cue-renderer) render catalog > $@",
    tools = ["//src/cue-renderer/cmd/cue-renderer"],
    visibility = ["//visibility:public"],
)

write_source_files(
    name = "freshness",
    check_that_out_file_exists = False,
    files = {
        "//src/cue-renderer/binaries:dev_tools.MODULE.bazel": ":bazel_dev_tools_module_render",
        "//src/cue-renderer/binaries:dev_tools.bzl": ":bazel_dev_tools_render",
        "//src/cue-renderer/binaries:server_tools.MODULE.bazel": ":bazel_module_render",
        "//src/cue-renderer/binaries:server_tools.bzl": ":bazel_server_tools_render",
        "//src/vm-orchestrator/guest-images:guest_images.MODULE.bazel": ":bazel_guest_images_render",
    },
)
