# gazelle:prefix github.com/verself/cue-renderer

load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("//tools/nomad:jobs.bzl", "nomad_resolved_jobs")

# Every CUE source the loader walks. Tests in the renderer tree depend
# on this filegroup via `data` so they can resolve the topology dir
# from runfiles via TEST_SRCDIR.
TOPOLOGY_SRCS = [
    "cue.mod/module.cue",
    "//src/cue-renderer/catalog:versions.cue",
    "//src/cue-renderer/instances/prod:config.cue",
    "//src/cue-renderer/instances/prod:service_facts.cue",
    "//src/cue-renderer/instances/prod:firewall.cue",
    "//src/cue-renderer/instances/prod:host_firewall.cue",
    "//src/cue-renderer/instances/prod:site.cue",
    "//src/cue-renderer/instances/prod:topology.cue",
    "//src/cue-renderer/schema:schema.cue",
]

filegroup(
    name = "topology_srcs",
    srcs = TOPOLOGY_SRCS,
    visibility = ["//src/cue-renderer:__subpackages__"],
)

# Bazel-input renderers — only artefacts that participate in the build
# graph (loaded via include()/load() at evaluation time) are tracked
# under git. Per-component nftables fragments, group_vars yml files,
# and Nomad job specs flow through `aspect render --site=<site>` into
# `.cache/render/<site>/`.

genrule(
    name = "bazel_module_render",
    srcs = TOPOLOGY_SRCS,
    outs = ["server_tools.MODULE.bazel"],
    cmd = "$(location //src/cue-renderer/cmd/cue-renderer) render bazel_module > $@",
    tools = ["//src/cue-renderer/cmd/cue-renderer"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "bazel_dev_tools_module_render",
    srcs = TOPOLOGY_SRCS,
    outs = ["dev_tools.MODULE.bazel"],
    cmd = "$(location //src/cue-renderer/cmd/cue-renderer) render bazel_dev_tools_module > $@",
    tools = ["//src/cue-renderer/cmd/cue-renderer"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "bazel_dev_tools_render",
    srcs = TOPOLOGY_SRCS,
    outs = ["dev_tools.bzl"],
    cmd = "$(location //src/cue-renderer/cmd/cue-renderer) render bazel_dev_tools > $@",
    tools = ["//src/cue-renderer/cmd/cue-renderer"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "bazel_server_tools_render",
    srcs = TOPOLOGY_SRCS,
    outs = ["server_tools.bzl"],
    cmd = "$(location //src/cue-renderer/cmd/cue-renderer) render bazel_server_tools > $@",
    tools = ["//src/cue-renderer/cmd/cue-renderer"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "bazel_guest_images_render",
    srcs = TOPOLOGY_SRCS,
    outs = ["guest_images.MODULE.bazel"],
    cmd = "$(location //src/cue-renderer/cmd/cue-renderer) render bazel_guest_images > $@",
    tools = ["//src/cue-renderer/cmd/cue-renderer"],
    visibility = ["//visibility:public"],
)

# Catalog YAML, consumed by build-time inputs that need pinned upstream
# versions (e.g. the substrate guest-image bundle). Not registered with
# write_source_files: there is no on-disk copy in the working tree, the
# catalog flows directly into downstream Bazel rules from this genrule.
genrule(
    name = "catalog_yaml",
    srcs = TOPOLOGY_SRCS,
    outs = ["catalog.yml"],
    cmd = "$(location //src/cue-renderer/cmd/cue-renderer) render catalog > $@",
    tools = ["//src/cue-renderer/cmd/cue-renderer"],
    visibility = ["//visibility:public"],
)

nomad_resolved_jobs(
    name = "prod_nomad_jobs",
    artifacts = {
        "//src/billing-service/cmd/billing-service:billing-service_nomad_artifact": "billing-service",
        "//src/viteplus-monorepo:nodejs_runtime_nomad_artifact": "nodejs-runtime",
        "//src/viteplus-monorepo/apps/company:node_app_nomad_artifact": "company",
        "//src/governance-service/cmd/governance-service:governance-service_nomad_artifact": "governance-service",
        "//src/identity-service/cmd/identity-service:identity-service_nomad_artifact": "identity-service",
        "//src/mailbox-service/cmd/mailbox-service:mailbox-service_nomad_artifact": "mailbox-service",
        "//src/notifications-service/cmd/notifications-service:notifications-service_nomad_artifact": "notifications-service",
        "//src/object-storage-service/cmd/object-storage-service:object-storage-service_nomad_artifact": "object-storage-service",
        "//src/profile-service/cmd/profile-service:profile-service_nomad_artifact": "profile-service",
        "//src/projects-service/cmd/projects-service:projects-service_nomad_artifact": "projects-service",
        "//src/sandbox-rental-service/cmd/sandbox-rental-recurring-worker:sandbox-rental-recurring-worker_nomad_artifact": "sandbox-rental-recurring-worker",
        "//src/sandbox-rental-service/cmd/sandbox-rental-service:sandbox-rental-service_nomad_artifact": "sandbox-rental-service",
        "//src/secrets-service/cmd/secrets-service:secrets-service_nomad_artifact": "secrets-service",
        "//src/source-code-hosting-service/cmd/source-code-hosting-service:source-code-hosting-service_nomad_artifact": "source-code-hosting-service",
        "//src/viteplus-monorepo/apps/verself-web:node_app_nomad_artifact": "verself-web",
    },
    cue_renderer = "//src/cue-renderer/cmd/cue-renderer",
    topology_srcs = TOPOLOGY_SRCS,
    visibility = ["//visibility:public"],
)

write_source_files(
    name = "freshness",
    check_that_out_file_exists = False,
    files = {
        "//src/cue-renderer/binaries:dev_tools.MODULE.bazel": ":bazel_dev_tools_module_render",
        "//src/cue-renderer/binaries:dev_tools.bzl": ":bazel_dev_tools_render",
        "//src/cue-renderer/binaries:server_tools.MODULE.bazel": ":bazel_module_render",
        "//src/cue-renderer/binaries:server_tools.bzl": ":bazel_server_tools_render",
        "//src/vm-orchestrator/guest-images:guest_images.MODULE.bazel": ":bazel_guest_images_render",
    },
)
