# gazelle:prefix github.com/verself/host-configuration

load("//src/tools/deployment/units:unit.bzl", "deploy_unit")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "converge_sources",
    srcs = [
        ":service_migration_sources",
        ":substrate_sources",
        "//src/host-configuration/binaries:server_tools_archive",
        "//src/host-configuration/binaries:substrate_go_tools",
    ],
)

filegroup(
    name = "service_migration_sources",
    srcs = [
        "//src/services/billing-service/migrations:sql_files",
        "//src/services/governance-service/migrations:sql_files",
        "//src/services/iam-service/migrations:sql_files",
        "//src/services/mailbox-service/migrations:sql_files",
        "//src/services/notifications-service/migrations:sql_files",
        "//src/services/object-storage-service/migrations:sql_files",
        "//src/services/profile-service/migrations:sql_files",
        "//src/services/projects-service/migrations:sql_files",
        "//src/services/sandbox-rental-service/migrations:sql_files",
        "//src/services/source-code-hosting-service/migrations:sql_files",
    ],
)

filegroup(
    name = "substrate_sources",
    srcs = glob(
        [
            "ansible/**",
            "components/*/defaults/**",
            "components/*/files/**",
            "components/*/handlers/**",
            "components/*/meta/**",
            "components/*/migrations/**",
            "components/*/tasks/**",
            "components/*/templates/**",
            "components/*/vars/**",
        ],
        allow_empty = True,
        exclude = [
            "ansible/.ansible/**",
            "ansible/.cache/**",
            "ansible/**/__rendered/**",
            "ansible/**/__pycache__/**",
            "ansible/*.ini",
        ],
    ),
)

deploy_unit(
    name = "host_convergence_unit",
    srcs = [":converge_sources"],
    payload_kind = "ansible_site_playbook",
    phase = "host_configuration_site",
    playbook = "playbooks/site.yml",
    unit_id = "host-configuration",
)

deploy_unit(
    name = "security_patch_unit",
    srcs = ["ansible/playbooks/security-patch.yml"],
    executor = "security_patch",
    payload_kind = "ansible_security_patch_playbook",
    phase = "security_patch",
    playbook = "playbooks/security-patch.yml",
    unit_id = "security-patch",
)
