load("//src/tools/deployment/components:substrate.bzl", "component_substrate_registry")
load("//src/tools/deployment/spire:identity.bzl", "spire_identity_registry")
load("//src/tools/deployment/units:unit.bzl", "deploy_unit")

package(default_visibility = ["//visibility:public"])

spire_identity_registry(
    name = "spire_identity_registry",
    identities = [
        "//src/components/clickhouse:spiffe_identity_operator",
        "//src/components/clickhouse:spiffe_identity_server",
        "//src/components/grafana:spiffe_identity",
        "//src/components/nats:spiffe_identity",
        "//src/components/otelcol:spiffe_identity",
        "//src/components/temporal-platform:spiffe_identity_server",
        "//src/services/billing-service:spiffe_identity",
        "//src/services/governance-service:spiffe_identity",
        "//src/services/iam-service:spiffe_identity",
        "//src/services/mailbox-service:spiffe_identity",
        "//src/services/notifications-service:spiffe_identity",
        "//src/services/object-storage-service:spiffe_identity_admin",
        "//src/services/object-storage-service:spiffe_identity_service",
        "//src/services/profile-service:spiffe_identity",
        "//src/services/projects-service:spiffe_identity",
        "//src/services/sandbox-rental-service:spiffe_identity",
        "//src/services/secrets-service:spiffe_identity",
        "//src/services/source-code-hosting-service:spiffe_identity",
    ],
)

component_substrate_registry(
    name = "component_substrate_registry",
    components = [
        "//src/components:electric_component_substrate",
        "//src/frontends/viteplus-monorepo/apps/company:component_substrate",
        "//src/frontends/viteplus-monorepo/apps/verself-web:component_substrate",
        "//src/services/billing-service:component_substrate",
        "//src/services/governance-service:component_substrate",
        "//src/services/iam-service:component_substrate",
        "//src/services/mailbox-service:component_substrate",
        "//src/services/notifications-service:component_substrate",
        "//src/services/object-storage-service:component_substrate",
        "//src/services/profile-service:component_substrate",
        "//src/services/projects-service:component_substrate",
        "//src/services/sandbox-rental-service:component_substrate",
        "//src/services/secrets-service:component_substrate",
        "//src/services/source-code-hosting-service:component_substrate",
    ],
)

filegroup(
    name = "converge_sources",
    srcs = [
        ":component_substrate_registry",
        ":site_sources",
        ":spire_identity_registry",
        ":substrate_sources",
        "//src/components:role_sources",
        "//src/host/binaries:server_tools_archive",
        "//src/host/binaries:substrate_go_tools",
    ],
)

filegroup(
    name = "site_sources",
    srcs = glob(
        ["sites/**"],
        allow_empty = False,
    ),
)

filegroup(
    name = "substrate_sources",
    srcs = glob(
        ["ansible/**"],
        allow_empty = True,
        exclude = [
            "ansible/.ansible/**",
            "ansible/.cache/**",
            "ansible/**/__rendered/**",
            "ansible/**/__pycache__/**",
            "ansible/*.ini",
        ],
    ) + [
        "//src/integrations:integration_sources",
    ],
)

deploy_unit(
    name = "host_convergence_unit",
    srcs = [":converge_sources"],
    payload_kind = "ansible_site_playbook",
    phase = "host_configuration_site",
    playbook = "playbooks/site.yml",
    unit_id = "host",
)
