load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:prefix github.com/verself/httpserver

go_library(
    name = "httpserver",
    srcs = ["httpserver.go"],
    importpath = "github.com/verself/httpserver",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
    ],
)

go_test(
    name = "httpserver_test",
    srcs = ["httpserver_test.go"],
    deps = [
        ":httpserver",
        "@org_golang_x_net//http2",
    ],
)

alias(
    name = "go_default_library",
    actual = ":httpserver",
    visibility = ["//visibility:public"],
)
