load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:prefix github.com/verself/otel

go_library(
    name = "otel",
    srcs = ["otel.go"],
    importpath = "github.com/verself/otel",
    visibility = ["//visibility:public"],
    deps = [
        "@io_opentelemetry_go_contrib_bridges_otelslog//:otelslog",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//baggage",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel//semconv/v1.26.0:v1_26_0",
        "@io_opentelemetry_go_otel_exporters_otlp_otlplog_otlploggrpc//:otlploggrpc",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc//:otlptracegrpc",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk_log//:log",
    ],
)

go_test(
    name = "otel_test",
    srcs = ["otel_test.go"],
    embed = [":otel"],
    deps = [
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//baggage",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk//trace/tracetest",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)

alias(
    name = "go_default_library",
    actual = ":otel",
    visibility = ["//visibility:public"],
)
