load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pgmigrate",
    srcs = ["pgmigrate.go"],
    importpath = "github.com/verself/pgmigrate",
    visibility = ["//visibility:public"],
    deps = ["@com_github_jackc_pgx_v5//:pgx"],
)

alias(
    name = "go_default_library",
    actual = ":pgmigrate",
    visibility = ["//visibility:public"],
)
