package(default_visibility = ["//visibility:public"])

exports_files([
    "scripts/build-guest-rootfs.sh",
])

filegroup(
    name = "current_substrate_sources",
    srcs = glob(
        [
            "ansible/**",
            "migrations/**",
            "scripts/**",
        ],
        exclude = [
            "ansible/.ansible/**",
            "ansible/.cache/**",
            "ansible/**/__pycache__/**",
            "scripts/**/__pycache__/**",
            "terraform/**",
            "uv-tools/**",
        ],
    ),
)
