package(default_visibility = ["//visibility:public"])

filegroup(
    name = "converge_sources",
    srcs = [
        "//src/cue-renderer:topology_srcs",
        "//src/cue-renderer/binaries:server_tools_archive",
        "//src/cue-renderer/binaries:substrate_go_tools",
        ":substrate_sources",
    ],
)

filegroup(
    name = "substrate_sources",
    srcs = glob(
        [
            "ansible/**",
            "controller-agent/**",
            "migrations/**",
            "scripts/**",
        ],
        exclude = [
            "ansible/.ansible/**",
            "ansible/.cache/**",
            "ansible/**/__pycache__/**",
            "ansible/inventory/*.ini",
            "scripts/.venv/**",
            "scripts/**/__pycache__/**",
        ],
    ),
)

genrule(
    name = "prod_substrate_digest",
    srcs = [":converge_sources"],
    outs = ["prod.substrate.sha256"],
    cmd = """
set -eu
render_dir="$(@D)/prod-substrate-render"
rm -rf "$$render_dir"
mkdir -p "$$render_dir"
$(location //src/cue-renderer/cmd/cue-renderer) generate --instance=prod --output-dir="$$render_dir" >/dev/null
{
  # Topology CUE files remain action inputs so Bazel re-runs this rule, but
  # raw CUE and rendered Nomad jobs are not digest material. Otherwise a
  # Nomad-only CUE edit would force host convergence.
  for f in $(SRCS); do
    case "$$f" in
      src/substrate/*|bazel-out/*)
        if [ -f "$$f" ]; then
          sha256sum "$$f"
        fi
        ;;
    esac
  done
  for root in "$$render_dir/inventory" "$$render_dir/share/rendered"; do
    if [ -d "$$root" ]; then
      find "$$root" -type f -print0
    fi
  done | LC_ALL=C sort -z | xargs -0 sha256sum
} | LC_ALL=C sort | sha256sum | cut -d' ' -f1 > "$@"
""",
    tools = ["//src/cue-renderer/cmd/cue-renderer"],
)
